# AC6_recomp

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  GRAPHICS_NATIVE_MASTER_PLAN.md  New Text Document.txt  Plan.md  README.md  ac6recomp_config.toml  build_err.txt  build_log.txt  build_out.txt  setup_and_build.bat  tmp_fixup_audio.py
backup/audio_fix_20260406_182007/: AUDIO_DEBUG_PROGRESS.md  ac6_audio_hooks.cpp  ac6_audio_policy.cpp  ac6_audio_policy.h
backup/audio_impl_20260405_172522/: CMakeLists.txt
backup/audio_impl_20260405_172522/src/: ac6_audio_hooks.cpp  ac6recomp_app.h  render_hooks.cpp  render_hooks.h
backup/pre_audio_clean_slate_20260406_213859/src/: ac6_audio_hooks.cpp  ac6_audio_policy.cpp  ac6_audio_policy.h  ac6recomp_app.h  render_hooks.cpp
backup/pre_strip_legacy_audio_20260406_201303/: AUDIO_DEBUG_PROGRESS.md  AUDIO_NATIVE_MIGRATION_FILES.md
backup/pre_strip_legacy_audio_20260406_201303/audio/: CMakeLists.txt  audio_client.h  audio_clock.cpp  audio_clock.h  audio_driver.h  audio_runtime.cpp  audio_runtime.h  audio_system.cpp  audio_system.h  audio_trace.cpp  audio_trace.h
backup/pre_strip_legacy_audio_20260406_201303/audio/host/: host_audio_backend.h  null_audio_backend.cpp
backup/pre_strip_legacy_audio_20260406_201303/audio/nop/: nop_audio_system.cpp  nop_audio_system.h
backup/pre_strip_legacy_audio_20260406_201303/audio/sdl/: sdl_audio_driver.cpp  sdl_audio_driver.h  sdl_audio_system.cpp  sdl_audio_system.h
backup/pre_strip_legacy_audio_20260406_201303/audio/wasapi/: wasapi_audio_driver.cpp  wasapi_audio_driver.h
backup/pre_strip_legacy_audio_20260406_201303/audio/xma/: context.cpp  context.h  decoder.cpp  xma_context_pool.cpp  xma_context_pool.h  xma_decoder_backend.cpp  xma_decoder_backend.h  xma_packet_parser.cpp  xma_packet_parser.h
backup/pre_strip_legacy_audio_20260406_201303/kernel/: CMakeLists.txt  kernel_init.cpp
backup/pre_strip_legacy_audio_20260406_201303/kernel/crt/: file.cpp
backup/pre_strip_legacy_audio_20260406_201303/kernel/xam/: xam_avatar.cpp  xam_content.cpp  xam_content_aggregate.cpp  xam_content_device.cpp  xam_debug.cpp  xam_enum.cpp  xam_info.cpp  xam_input.cpp  xam_locale.cpp  xam_module.cpp  xam_msg.cpp  xam_net.cpp  xam_notify.cpp  xam_nui.cpp  xam_party.cpp  xam_task.cpp  xam_ui.cpp  xam_user.cpp  xam_video.cpp  xam_voice.cpp
backup/pre_strip_legacy_audio_20260406_201303/kernel/xboxkrnl/: xboxkrnl_audio.cpp  xboxkrnl_audio_xma.cpp  xboxkrnl_crypt.cpp  xboxkrnl_debug.cpp  xboxkrnl_error.cpp  xboxkrnl_hal.cpp  xboxkrnl_hid.cpp  xboxkrnl_io.cpp  xboxkrnl_io_info.cpp  xboxkrnl_memory.cpp  xboxkrnl_misc.cpp  xboxkrnl_module.cpp  xboxkrnl_modules.cpp  xboxkrnl_ob.cpp  xboxkrnl_rtl.cpp  (+5 more)
backup/pre_strip_legacy_audio_20260406_201303/src/: ac6_audio_hooks.cpp  ac6_audio_policy.cpp  ac6_audio_policy.h  ac6recomp_app.h  d3d_hooks.cpp  d3d_hooks.h  d3d_state.h  main.cpp  render_hooks.h
cmake/: rexglue_bootstrap.cmake
docs/: RENDERER_ARCHITECTURE.txt  TEXTURE_SWAPS.md  TEXTURE_SWAPS.txt  TEXTURE_SWAP_MODDING_GUIDE.txt  ac6_asset_extraction_walkthrough.txt  ac6_asset_pipeline.md  ac6_audio_extraction_walkthrough.txt
docs/native_graphics_migration/: AC6_NATIVE_GRAPHICS_API_DEPRECATION_TIMELINE.md  AC6_NATIVE_GRAPHICS_CONFIG_MIGRATION_MATRIX.md  AC6_NATIVE_GRAPHICS_DOC_TRACKER.md  AC6_NATIVE_GRAPHICS_EMULATION_AUDIT_2026-04-17.md  AC6_NATIVE_GRAPHICS_EXECUTION_PLAN_2026-04-17.md  AC6_NATIVE_GRAPHICS_MIGRATION_STRATEGY_2026-04-17.md  AC6_NATIVE_GRAPHICS_RENDER_API_REMOVAL_MAP.md
src/: Milestone.md  ac6_native_assets.cpp  ac6_native_assets.h  ac6_native_graphics.cpp  ac6_native_graphics.h  ac6_native_graphics_overlay.cpp  ac6_native_graphics_overlay.h  ac6_pac_decode_dump.cpp  ac6_pac_decode_dump.h  ac6_pac_decoder_probe.cpp  ac6_pac_decoder_probe.h  ac6_pac_index.cpp  ac6_pac_index.h  ac6_texture_overrides.cpp  ac6_texture_overrides.h  ac6recomp_app.h  d3d_hooks.cpp  d3d_hooks.h  d3d_state.h  main.cpp  main.cpp.bak  render_hooks.cpp  render_hooks.h
src/ac6_backend_fixes/: ac6_backend_capture_bridge.cpp  ac6_backend_capture_bridge.h  ac6_backend_hooks.cpp  ac6_backend_hooks.h  ac6_backend_pass_classifier.cpp  ac6_backend_pass_classifier.h
src/ac6_native_renderer/: ac6_render_frontend.cpp  ac6_render_frontend.h  execution_plan.cpp  execution_plan.h  frame_plan.cpp  frame_plan.h  frame_scheduler.cpp  frame_scheduler.h  native_renderer.cpp  native_renderer.h  render_device.cpp  render_device.h  render_graph.cpp  render_graph.h  replay_executor.cpp  replay_executor.h  replay_ir.cpp  replay_ir.h  types.h
src/ac6_native_renderer/backends/: backend_factory.cpp  d3d12_backend.cpp  d3d12_backend.h  d3d12_resource_manager.cpp  d3d12_resource_manager.h  d3d12_resource_tracker.cpp  d3d12_resource_tracker.h  d3d12_shader_manager.cpp  d3d12_shader_manager.h  metal_backend.cpp  metal_backend.h  vulkan_backend.cpp  vulkan_backend.h
tools/: export_ac6_audio.py  export_ac6_ntxr.py  extract_ac6_pac.py  extract_ac6_runtime_fhm.py  launch_ac6_with_pac_dump.ps1  pac_probe_lzx.cpp  parse_ac6_swg.py  run_ac6_asset_pipeline.py
tools/native_graphics_migration/: migrate_legacy_graphics_config.py
(+1 files in other folders)
